@@ -12,6 +12,8 @@ for more details, see http://svn.sourceforge.net/viewcvs.cgi/psycle/trunk/?view=
 	* changed a bit the initialization of the static psycle::host::logger::default_logger_ostream() in psycle/host/global.cpp.
 	* plugin dir: temporary work around for msvc8 manifests.
 	* replaced most of src/legacy with src/universalis ; only src/legacy/loggers.{c,h}pp left.
+	* src/legacy/operating_system/logger.cpp: fixed a #if which was taking out some code that should have been enabled on mswindows.
+	* 64-bit: got rid of a few size reduction problems.
 
 2006/03/13 20:35:04  jaz001
 
